5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4192/executions/1644_1053.log
== SUBMITION (2019-04-16 14:24:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a== "cervo"):
	k = "cervo eh pratono do Harry potter"
	else:
		k = a + " "+"nao eh patrono e Harry potter"
print(k)
-- EXECUTION TIME:
0.116827
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 7
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:25:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a== "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono e Harry potter"
print(k)
-- EXECUTION TIME:
0.172463
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono e Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:26:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a== "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono e Harry potter"
print(k)
-- EXECUTION TIME:
0.192416
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono e Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:26:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono e Harry potter"
print(k)
-- EXECUTION TIME:
0.183
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono e Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:26:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)
-- EXECUTION TIME:
0.214773
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:26:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)
-- EXECUTION TIME:
0.196398
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:26:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)
-- EXECUTION TIME:
0.177298
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:27:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)
-- EXECUTION TIME:
0.193889
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:27:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)
-- OUTPUT:
cervo eh pratono do Harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:28:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh pratrono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)

-- EXECUTION TIME:
0.132014
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratrono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:28:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh patrono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)

-- EXECUTION TIME:
0.183023
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:28:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh patrono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)

-- EXECUTION TIME:
0.170078
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:28:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh patrono do Harry potter"
else:
		k = a + " "+"nao eh patrono do Harry potter"
print(k)

-- EXECUTION TIME:
0.189686
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:29:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh patrono do Harry Potter"
else:
		k = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- EXECUTION TIME:
0.112068
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:59:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	g = "cervo eh patrono do Harry Potter"
else:
		g = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- EXECUTION TIME:
0.142039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 9, in <module>
    print(k)
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:59:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh patrono do Harry Potter"
else:
		k = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- EXECUTION TIME:
0.199948
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:00:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	j = "cervo eh patrono do Harry Potter"
else:
		j = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- EXECUTION TIME:
0.18797
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 9, in <module>
    print(k)
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:00:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	j = "cervo eh patrono do Harry Potter"
else:
		j = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- EXECUTION TIME:
0.143995
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 9, in <module>
    print(k)
NameError: name 'k' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:00:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	j = "cervo eh patrono do Harry Potter"
else:
		j = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(k)
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:00:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=input("cervo")
if ( a == "cervo"):
	k = "cervo eh patrono do Harry Potter"
else:
		k = a + " "+"nao eh patrono do Harry Potter"
print(k)

-- EXECUTION TIME:
0.132615
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
